# epistract

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPER.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  umesh-todo.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.0-MILESTONE-AUDIT.md
agents/: acquirer.md  extractor.md  validator.md
commands/: acquire.md  ask.md  build.md  dashboard.md  db-corpus.md  domain-delete.md  domain-list.md  domain-update.md  domain.md  epistemic.md  export.md  ingest.md  query.md  setup.md  validate.md  view.md
core/: __init__.py  build_extraction.py  chunk_document.py  domain_resolver.py  domain_wizard.py  entity_resolution.py  ingest_documents.py  label_communities.py  label_epistemic.py  llm_client.py  run_sift.py
docs/: ADDING-DOMAINS.md  ARCHITECTURE.md  COMMANDS.md  DOMAINS.md  PIPELINE-CAPACITY.md  SHOWCASE-CLINICALTRIALS.md  SHOWCASE-FDA.md  SHOWCASE-GLP1.md  WORKBENCH.md  drug-discovery-domain-spec.md  epistract-plugin-design.md  known-limitations.md
epistract-output-ogn/: claims_layer.json  communities.json  epistemic_narrative.md  graph_data.json  relation_review.yaml
medium/: beyond-rag-article.md
paper/: Makefile  main.tex  references.bib
poster/: poster.tex
scripts/: audit_repo.sh  build_extraction.py  domain_resolver.py  epistemic_biomedical.py  epistemic_contract.py  extract_contracts.py  extract_corpus.py  fetch_ct_protocols.py  fetch_faers_corpus.py  run_sift.py  (+11 more)
(+911 files in other folders)
